src/test/run-pass/compiletest-skip-codegen.rs
// Test that with the `skip-codegen` option the test isn't executed.

// skip-codegen

fn main() {
    unreachable!();
}
